# LightInkLLM

./: .gitignore  LICENSE  README.md
Example/: Main.cpp
Example/Log/: ExampleLog.cpp
Example/Lua/: BindAbstract.cpp  BindAbstract.lua  BindClass.cpp  BindClass.lua  BindInherit.cpp  BindInherit.lua  BindStatic.cpp  BindStatic.lua  ExampleLua.cpp
Example/MsgPack/: CompressEncrypt.cpp  ExampleMsgPack.cpp  PackClass.cpp  PackType.cpp
Example/Socket/: ExampleSocket.cpp
Linux/: CMakeLists.txt
Linux/Example/: CMakeLists.txt
Linux/LightInkLLM/: CMakeLists.txt
include/Atomic/: Atomic.h  Guard.h  SpinMutex.h
include/Atomic/Turf/: core.h
include/Common/: ArgParser.h  AsyncQueue.h  CharPtrBridge.h  Config.h  LightInkVersion.h  OsHelper.h  RuntimeError.h  STLType.h  SelfDQueue.cpp  SelfDQueue.h  SingletonBase.h  Type.h  UserMemory.h  WinSnprintf.h
include/Common/Memory/: BaseBuffer.h  BufferReader.h  MemoryAllocator.h  RingBuffer.h  SmallAllocator.h
include/Common/Ptr/: AutoPtr.cpp  AutoPtr.h  RefCounter.h  SharedPtr.cpp  SharedPtr.h
include/Common/TypeTool/: CompileTimeChecker.h  TypeList.h  TypeListDefine.h  TypeTool.h
include/Log/: FixedLogger.h  Log.h  LogConfig.h  LogFlagFormat.h  LogFormat.h  LogItem.h  LogOption.h  LogThreadType.h  Logger.h  LoggerMgr.h
include/Log/async/: AsyncMsg.h  AsyncThread.h
include/Log/channel/: DateNameStrategy.h  LogChannel.h  LogChannelAndroid.h  LogChannelFile.h  LogChannelList.h  LogChannelMT.h  LogChannelMsvc.h  LogChannelNull.h  LogChannelOstream.h  LogChannelStd.h  LogChannelStdColor.h
include/Log/helper/: FileHelper.h  FormatHelper.h  LogTraceHelper.h
include/LuaEngine/: LuaCFunctionTraits.h  LuaClassCtorTraits.h  LuaClassInfo.h  LuaClassMgr.h  LuaClassPropertyTraits.h  LuaDebugger.h  LuaDefAutoTool.h  LuaDefTool.h  LuaDefTraits.h  LuaEngine.h  LuaFixFunction.h  LuaInt64.h  LuaIterator.h  LuaLib.h  LuaMetatable.h  LuaMetatableTraits.h  LuaModule.h  LuaObjectCache.h  LuaRef.h  LuaRegister.cpp  LuaRegister.h  LuaRegisterAbstract.cpp  LuaRegisterAbstract.h  LuaStack.h  LuaStateProtect.h  LuaTableRef.h  LuaUserdata.h  LuaUserdataForClass.h
include/LuaEngine/lua/: luaconf.h
include/LuaEngine/luajit/: luaconf.h
include/Msgpack/: DataBuffer.h  DataFixBuffer.cpp  DataFixBuffer.h  DataRefBuffer.h  DataSharedBuffer.h  PackBuffer.cpp  PackBuffer.h  PackDefine.h  PackTuple.h  Packer.cpp  Packer.h  PackerAdaptor.cpp  PackerAdaptor.h  Unpacker.cpp  Unpacker.h  UnpackerAdaptor.h
include/Msgpack/encrypter/: CapCompresser.h  Crc32Encrypter.h  XxteaEncrypter.h
include/Timer/: STTimerMgr.h  TimerData.h  TimerWheel.h
include/TinySocket/: LinkBase.h  LinkError.h  LinkKcp.h  LinkTcp.h  LinkUdp.h  PlatformHost.h  TalkLoop.h  TalkLoopInline.h
include/fmt/: fmt.h  format.h  format.hpp
project/: CMakeLists.txt
project/Example/: CMakeLists.txt
project/LightInkLLMT/: CMakeLists.txt
src/Atomic/: SpinMutex.cpp
src/Common/: ArgParser.cpp  LightInkVersion.cpp  OsHelper.cpp  RuntimeError.cpp  WinSnprintf.c
src/Common/Memory/: BaseBuffer.cpp  RingBuffer.cpp  SmallAllocator.cpp
src/Log/: LogOption.cpp  LogThreadType.cpp  Logger.cpp  LoggerMgr.cpp
src/Log/async/: AsyncMsg.cpp  AsyncThread.cpp
src/Log/channel/: DateNameStrategy.cpp  LogChannel.cpp  LogChannelAndroid.cpp  LogChannelStdColor.cpp
src/Log/helper/: FileHelper.cpp
src/LuaEngine/: LuaClassMgr.cpp  LuaDebugger.cpp  LuaEngine.cpp  LuaIndexMetatable.cpp  LuaInt64.cpp  LuaIterator.cpp  LuaMetatable.cpp  LuaModule.cpp  LuaRef.cpp  LuaTableRef.cpp
src/Msgpack/: DataBuffer.cpp  DataRefBuffer.cpp
src/Msgpack/encrypter/: CapCompresser.cpp  Crc32Encrypter.cpp  XxteaEncrypter.cpp
src/Timer/: STTimerMgr.cpp  TimerData.cpp  TimerWheel.cpp
src/TinySocket/: LinkBase.cpp  LinkError.cpp  LinkKcp.cpp  LinkTcp.cpp  LinkUdp.cpp  TalkLoop.cpp
src/kcp/: ikcp.c
windows/: LightInkLLM.sln  clear.bat
windows/Example/: Example.vcxproj  Example.vcxproj.filters
windows/LightInkLLM/: LightInkLLM.vcxproj  LightInkLLM.vcxproj.filters
